--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,7 @@
             <div class="top__slider-item">
               <img class="top__slider-image" src="images/content/slider-image.png" alt="image">
               <div class="top__slider-info">
-                <h2 class="top__slider-title">Furniture
-                  collection</h2>
+                <h2 class="top__slider-title">Furniture collection</h2>
                 <p class="top__slider-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores totam placeat id reprehenderit?
                   Sint, fugiat natus commodi consequuntur officiis dolor.
@@ -80,8 +79,7 @@
             <div class="top__slider-item">
               <img class="top__slider-image" src="images/content/slider-image.png" alt="image">
               <div class="top__slider-info">
-                <h2 class="top__slider-title">Furniture
-                  collection</h2>
+                <h2 class="top__slider-title">Furniture collection</h2>
                 <p class="top__slider-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores totam placeat id reprehenderit?
                   Sint, fugiat natus commodi consequuntur officiis dolor.
@@ -91,8 +89,7 @@
             <div class="top__slider-item">
               <img class="top__slider-image" src="images/content/slider-image.png" alt="image">
               <div class="top__slider-info">
-                <h2 class="top__slider-title">Furniture
-                  collection</h2>
+                <h2 class="top__slider-title">Furniture collection</h2>
                 <p class="top__slider-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores totam placeat id reprehenderit?
                   Sint, fugiat natus commodi consequuntur officiis dolor.
