finished workflow sect.

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <div class="wrapper">
+    <!-- === HEADER === -->
     <header class="header">
       <div class="container">
         <div class="header__inner">
@@ -61,9 +62,11 @@
         </div>
       </div>
     </header>
+    <!-- === / HEADER === -->
 
     <main class="main">
-      <div class="top">
+      <!-- === TOP === -->
+      <section class="top">
         <div class="top__inner">
           <div class="top__slider">
             <div class="top__slider-item">
@@ -98,9 +101,138 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- === / TOP === -->
+
+      <!-- === NEW COLLECTION === -->
+      <section class="new-collection">
+        <div class="container-fluid">
+          <h3 class="new-collection__title">
+            Furniture new collection
+          </h3>
+          <p class="new-collection__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, optio. Lorem ipsum dolor sit amet.
+          </p>
+          <div class="collection">
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/content/collection-item-1.jpg" alt="Velvet Couch">
+              <div class="collection__info">
+                <h6 class="collection__info-title">
+                  Velvet Couch
+                </h6>
+                <p class="collection__info-text">
+                  Living room furniture | Couch
+                </p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/content/collection-item-2.jpg"
+                alt="Living room furniture set (Sofa with 2 armchairs)">
+              <div class="collection__info">
+                <h6 class="collection__info-title">
+                  Living Room Furniture Set (Sofa with 2 Armchairs)
+                </h6>
+                <p class="collection__info-text">
+                  Living room furniture | Set
+                </p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/content/collection-item-3.jpg" alt="Armchair 'Parrot'">
+              <div class="collection__info">
+                <h6 class="collection__info-title">
+                  Armchair "Parrot"
+                </h6>
+                <p class="collection__info-text">
+                  Living room furniture | Chair
+                </p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/content/collection-item-4.jpg" alt="Small Cabinet">
+              <div class="collection__info">
+                <h6 class="collection__info-title">
+                  Small Cabinet
+                </h6>
+                <p class="collection__info-text">
+                  Living room furniture | Cabinet
+                </p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__image" src="images/content/collection-item-5.jpg" alt="Couch 'Sidney'">
+              <div class="collection__info">
+                <h6 class="collection__info-title">
+                  Couch "Sidney"
+                </h6>
+                <p class="collection__info-text">
+                  Living room furniture | Couch
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- === / NEW COLLECTION === -->
+
+      <!-- === BANNER-SOFA === -->
+      <section class="banner-sofa">
+        <div class="container">
+          <h2 class="banner-sofa__title">
+            Valuate <br>
+            your leisure time
+          </h2>
+          <p class="banner-sofa__text">
+            «<span>It’s not a man’s working hours that is important, it is how he spends his leisure time.</span>» <br>
+            © Marilynne Robinson
+          </p>
+        </div>
+      </section>
+      <!-- === / BANNER-SOFA === -->
+
+      <!-- === WORKFLOW === -->
+      <section class="workflow">
+        <div class="container">
+          <h3 class="workflow__title">
+            How it works
+          </h3>
+          <div class="workflow__items">
+            <div class="workflow__items-box">
+              <div class="workflow__item workflow__item--consultation">
+                <img class="workflow__item-image" src="images/icons/graphic-tools.svg" alt="icon Designer Consultation">
+                <h6 class="workflow__item-title">
+                  Designer Consultation
+                </h6>
+                <p class="workflow__item-text">
+                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche.
+                </p>
+              </div>
+              <div class="workflow__item workflow__item--production">
+                <img class="workflow__item-image" src="images/icons/sofa.svg" alt="icon Production">
+                <h6 class="workflow__item-title">
+                  Production
+                </h6>
+                <p class="workflow__item-text">
+                  Everyday carry actually neutra authentic kogi shabby chic.
+                </p>
+              </div>
+            </div>
+            <div class="workflow__item workflow__item--measurements">
+              <img class="workflow__item-image" src="images/icons/measuring-tape.svg" alt="icon Measurements">
+              <h6 class="workflow__item-title">
+                Measurements
+              </h6>
+              <p class="workflow__item-text">
+                Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === / WORKFLOW === -->
     </main>
 
+    <!-- === FOOTER === -->
     <footer class="footer">
       <div class="footer__content">
         <div class="container">
@@ -167,6 +299,7 @@
         </div>
       </div>
     </footer>
+    <!-- === / FOOTER === -->
 
   </div>
 
