--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,8 @@
                   Designer Consultation
                 </h6>
                 <p class="workflow__item-text">
-                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche.
+                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book.
+                  Semiotics man bun venmo viral cliche.
                 </p>
               </div>
               <div class="workflow__item workflow__item--production">
@@ -230,6 +231,113 @@
         </div>
       </section>
       <!-- === / WORKFLOW === -->
+
+      <!-- === GALLERY === -->
+      <div class="gallery">
+        <div class="container-fluid">
+          <div class="gallery__buttons">
+            <button class="gallery__button" type="button" data-filter=".cat-bedroom">Bedroom furniture</button>
+            <button class="gallery__button" type="button" data-filter=".cat-living-room">Living room furniture</button>
+            <button class="gallery__button" type="button" data-filter=".cat-office">Office furniture</button>
+            <button class="gallery__button" type="button" data-filter=".cat-dining-room">Dining room futniture</button>
+            <button class="gallery__button" type="button" data-filter=".cat-chair">Chair</button>
+          </div>
+          <div class="gallery__inner">
+
+            <div class="gallery__items mix cat-office">
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/1.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/2.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/3.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/4.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/5.jpg" alt="gallery image">
+              </a>
+            </div>
+
+            <div class="gallery__items mix cat-chair">
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/2.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/3.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/4.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/5.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/1.jpg" alt="gallery image">
+              </a>
+            </div>
+
+            <div class="gallery__items mix cat-living-room">
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/3.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/4.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/5.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/1.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/2.jpg" alt="gallery image">
+              </a>
+            </div>
+
+            <div class="gallery__items mix cat-dining-room">
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/4.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/5.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/1.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/2.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/3.jpg" alt="gallery image">
+              </a>
+            </div>
+
+            <div class="gallery__items mix cat-bedroom">
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/5.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/1.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/2.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/3.jpg" alt="gallery image">
+              </a>
+              <a class="gallery__item" href="#">
+                <img class="gallery__image" src="images/content/gallery/4.jpg" alt="gallery image">
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <!-- === / GALLERY === -->
     </main>
 
     <!-- === FOOTER === -->
