finished main blog

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
       <!-- === NEW COLLECTION === -->
       <section class="new-collection">
         <div class="container-fluid">
-          <h3 class="new-collection__title">
+          <h3 class="new-collection__title title">
             Furniture new collection
           </h3>
           <p class="new-collection__text">
@@ -115,7 +115,7 @@
           </p>
           <div class="collection">
             <a class="collection__item" href="#">
-              <img class="collection__image" src="images/content/collection-item-1.jpg" alt="Velvet Couch">
+              <img class="collection__image" src="images/content/collection/collection-item-1.jpg" alt="Velvet Couch">
               <div class="collection__info">
                 <h6 class="collection__info-title">
                   Velvet Couch
@@ -126,7 +126,7 @@
               </div>
             </a>
             <a class="collection__item" href="#">
-              <img class="collection__image" src="images/content/collection-item-2.jpg"
+              <img class="collection__image" src="images/content/collection/collection-item-2.jpg"
                 alt="Living room furniture set (Sofa with 2 armchairs)">
               <div class="collection__info">
                 <h6 class="collection__info-title">
@@ -138,7 +138,8 @@
               </div>
             </a>
             <a class="collection__item" href="#">
-              <img class="collection__image" src="images/content/collection-item-3.jpg" alt="Armchair 'Parrot'">
+              <img class="collection__image" src="images/content/collection/collection-item-3.jpg"
+                alt="Armchair 'Parrot'">
               <div class="collection__info">
                 <h6 class="collection__info-title">
                   Armchair "Parrot"
@@ -149,7 +150,7 @@
               </div>
             </a>
             <a class="collection__item" href="#">
-              <img class="collection__image" src="images/content/collection-item-4.jpg" alt="Small Cabinet">
+              <img class="collection__image" src="images/content/collection/collection-item-4.jpg" alt="Small Cabinet">
               <div class="collection__info">
                 <h6 class="collection__info-title">
                   Small Cabinet
@@ -160,7 +161,7 @@
               </div>
             </a>
             <a class="collection__item" href="#">
-              <img class="collection__image" src="images/content/collection-item-5.jpg" alt="Couch 'Sidney'">
+              <img class="collection__image" src="images/content/collection/collection-item-5.jpg" alt="Couch 'Sidney'">
               <div class="collection__info">
                 <h6 class="collection__info-title">
                   Couch "Sidney"
@@ -193,7 +194,7 @@
       <!-- === WORKFLOW === -->
       <section class="workflow">
         <div class="container">
-          <h3 class="workflow__title">
+          <h3 class="workflow__title title">
             How it works
           </h3>
           <div class="workflow__items">
@@ -338,6 +339,60 @@
         </div>
       </div>
       <!-- === / GALLERY === -->
+
+      <!-- === BLOG-BOX === -->
+      <section class="blog-box">
+        <div class="container">
+          <h3 class="blog-box__title title">
+            More inspiration ideas in our blog
+          </h3>
+          <div class="blog-box__items">
+            <div class="blog-box__item">
+              <a class="blog-box__image-link" href="#">
+                <img class="blog-box__image" src="images/content/blog/1.jpg" alt="blog post image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">
+                  August 12, 2021
+                </span> |
+                <a class="blog-box__author" href="#">
+                  by Ann Summers
+                </a> |
+                <a class="blog-box__theme" href="#">
+                  Inrerior
+                </a>
+              </div>
+              <a class="blog-box__item-title-link" href="#">
+                <h4 class="blog-box__item-title">
+                  Styling trends for modern office
+                </h4>
+              </a>
+            </div>
+            <div class="blog-box__item">
+              <a class="blog-box__image-link" href="#">
+                <img class="blog-box__image" src="images/content/blog/2.jpg" alt="blog post image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">
+                  August 25, 2021
+                </span> |
+                <a class="blog-box__author" href="#">
+                  by Finnagan Morningstar
+                </a> |
+                <a class="blog-box__theme" href="#">
+                  Living room interior
+                </a>
+              </div>
+              <a class="blog-box__item-title-link" href="#">
+                <h4 class="blog-box__item-title">
+                  A pack of real comfy living rooms
+                </h4>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === / BLOG-BOX === -->
     </main>
 
     <!-- === FOOTER === -->
