--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link menu__list-link--active" href="#">About</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#">Gallery</a>
@@ -67,7 +67,22 @@
     </header>
 
     <main class="main">
-
+      <div class="breadcrumbs">
+        <div class="container">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">
+                Home
+              </a>
+            </li>
+            <li class="breadcrumbs__item">
+              <span class="breadcrumbs__link">
+                About
+              </span>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
