--- a/app/page.html
+++ b/app/page.html
@@ -67,7 +67,22 @@
     </header>
 
     <main class="main">
-
+      <div class="breadcrumbs">
+        <div class="container">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">
+                Home
+              </a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">
+                About
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
