--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="wrapper">
-
+    <!-- === HEADER === -->
     <header class="header">
       <div class="container">
         <div class="header__inner">
@@ -65,6 +65,7 @@
         </div>
       </div>
     </header>
+    <!-- === / HEADER === -->
 
     <main class="main">
       <div class="breadcrumbs">
@@ -83,8 +84,40 @@
           </ul>
         </div>
       </div>
+      <!-- === ABOUT === -->
+      <section class="about">
+        <div class="about__preview">
+          <div class="container">
+            <h1 class="about__preview-title">About Us</h1>
+          </div>
+        </div>
+        <div class="about__content">
+          <div class="container">
+            <h2 class="about__title title">
+              Balance in the simple through an informed marriage of design, functional and craft
+            </h2>
+            <div class="about__text">
+              <p>
+                Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents
+                hella sustainable cardigan.
+              </p>
+              <p>
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote
+                bag synth brunch. Retro cornhole
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="about__pop-up">
+          <a class="about__pop-up-link-to-vid" data-fancybox href="https://youtu.be/oubc0B25Vn8?t=20">
+            <img class="about__pop-up-play-icon" src="images/icons/play-button.svg" alt="play button icon">
+          </a>
+        </div>
+      </section>
+      <!-- === / ABOUT === -->
     </main>
 
+    <!-- === FOOTER === -->
     <footer class="footer">
       <div class="footer__content">
         <div class="container">
@@ -151,6 +184,7 @@
         </div>
       </div>
     </footer>
+    <!-- === / FOOTER === -->
 
   </div>
 
