--- a/app/about.html
+++ b/app/about.html
@@ -115,6 +115,70 @@
         </div>
       </section>
       <!-- === / ABOUT === -->
+
+      <!-- === INSPIRATION === -->
+      <section class="inspiration">
+        <div class="container-fluid">
+          <div class="inspiration__inner">
+            <img class="inspiration__image" src="images/inspiration-image.png" alt="green chair">
+            <div class="inspiration__content">
+              <h3 class="inspiration__title title">
+                Our inspiration in details
+              </h3>
+              <p class="inspiration__text">
+                Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+              </p>
+              <ul class="inspiration__list">
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-txt">
+                      Design and technical drawings
+                    </p>
+                    <p class="inspiration__item-num">
+                      80%
+                    </p>
+                  </div>
+                  <div class="inspiration__line" style="width: 80%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-txt">
+                      Measurements
+                    </p>
+                    <p class="inspiration__item-num">
+                      70%
+                    </p>
+                  </div>
+                  <div class="inspiration__line" style="width: 70%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-txt">
+                      Furniture functionality analysis
+                    </p>
+                    <p class="inspiration__item-num">
+                      75%
+                    </p>
+                  </div>
+                  <div class="inspiration__line" style="width: 75%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-txt">
+                      Interior visualization
+                    </p>
+                    <p class="inspiration__item-num">
+                      40%
+                    </p>
+                  </div>
+                  <div class="inspiration__line" style="width: 40%"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === / INSPIRATION === -->
     </main>
 
     <!-- === FOOTER === -->
