partners mini-block finished

--- a/app/about.html
+++ b/app/about.html
@@ -179,6 +179,81 @@
         </div>
       </section>
       <!-- === / INSPIRATION === -->
+
+      <!-- === PARTNERS === -->
+      <div class="partners">
+        <div class="container-fluid">
+          <div class="partners__items">
+            <img class="partners__image" src="images/content/partners/blush.svg" alt="blush logo">
+            <img class="partners__image" src="images/content/partners/bahnuk.svg" alt="bahnuk logo">
+            <img class="partners__image" src="images/content/partners/blush.svg" alt="blush logo">
+            <img class="partners__image" src="images/content/partners/bahnuk.svg" alt="bahnuk logo">
+            <img class="partners__image" src="images/content/partners/blush.svg" alt="blush logo">
+          </div>
+        </div>
+      </div>
+      <!-- === / PARTNERS === -->
+
+      <!-- === COLLECTION === -->
+      <div class="collection">
+        <a class="collection__item" href="#">
+          <img class="collection__image" src="images/content/collection/collection-item-1.jpg" alt="Velvet Couch">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Velvet Couch
+            </h6>
+            <p class="collection__info-text">
+              Living room furniture | Couch
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__image" src="images/content/collection/collection-item-2.jpg"
+            alt="Living room furniture set (Sofa with 2 armchairs)">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Living Room Furniture Set (Sofa with 2 Armchairs)
+            </h6>
+            <p class="collection__info-text">
+              Living room furniture | Set
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__image" src="images/content/collection/collection-item-3.jpg" alt="Armchair 'Parrot'">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Armchair "Parrot"
+            </h6>
+            <p class="collection__info-text">
+              Living room furniture | Chair
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__image" src="images/content/collection/collection-item-4.jpg" alt="Small Cabinet">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Small Cabinet
+            </h6>
+            <p class="collection__info-text">
+              Living room furniture | Cabinet
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__image" src="images/content/collection/collection-item-5.jpg" alt="Couch 'Sidney'">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Couch "Sidney"
+            </h6>
+            <p class="collection__info-text">
+              Living room furniture | Couch
+            </p>
+          </div>
+        </a>
+      </div>
+      <!-- === / COLLECTION === -->
     </main>
 
     <!-- === FOOTER === -->
