finished gallery-page

--- a/app/about.html
+++ b/app/about.html
@@ -24,11 +24,11 @@
                 <a class="menu__list-link menu__list-link--active" href="#">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link" href="gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img class="logo__img" src="images/logo.png" alt="logo">
           </a>
           <nav class="menu">
