finished contact sect

--- a/app/contact.html
+++ b/app/contact.html
@@ -85,9 +85,67 @@
       </div>
       <!-- === MAP === -->
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.6149257632055!2d-122.41326968439533!3d37.799063218534116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2s725%20Green%20St%2C%20San%20Francisco%2C%20CA%2094133%2C%20USA!5e0!3m2!1sde!2sru!4v1630085845788!5m2!1sde!2sru" width="100%" height="580" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.6149257632055!2d-122.41326968439533!3d37.799063218534116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2s725%20Green%20St%2C%20San%20Francisco%2C%20CA%2094133%2C%20USA!5e0!3m2!1sde!2sru!4v1630085845788!5m2!1sde!2sru"
+          width="100%" height="580" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <!-- === / MAP === -->
+
+      <!-- === CONTACT === -->
+      <section class="contact">
+        <div class="container">
+          <h2 class="contact__title title">
+            Contact Us
+          </h2>
+          <div class="contact__inner">
+            <ul class="contact__social">
+              <li class="contact__social-item">
+                <a class="contact__social-link" href="#">
+                  <img class="contact__social-icon" src="images/icons/facebook.svg" alt="facebook icon">
+                </a>
+              </li>
+              <li class="contact__social-item">
+                <a class="contact__social-link" href="#">
+                  <img class="contact__social-icon" src="images/icons/instagram.svg" alt="instagram icon">
+                </a>
+              </li>
+              <li class="contact__social-item">
+                <a class="contact__social-link" href="#">
+                  <img class="contact__social-icon" src="images/icons/pinterest.svg" alt="pinterest icon">
+                </a>
+              </li>
+              <li class="contact__social-item">
+                <a class="contact__social-link" href="#">
+                  <img class="contact__social-icon" src="images/icons/whatsapp.svg" alt="whatsapp icon">
+                </a>
+              </li>
+              <li class="contact__social-item">
+                <a class="contact__social-link" href="#">
+                  <img class="contact__social-icon" src="images/icons/youtube.svg" alt="youtube icon">
+                </a>
+              </li>
+            </ul>
+            <p class="contact__text">
+              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock.
+            </p>
+            <a class="contact__phone" href="tel:+14158297934">+1 (415) 829-7934</a>
+            <address class="contact__address">
+              725 Green St <br>
+              San Francisco, California(CA), 94133
+            </address>
+            <a class="contact__info-email email" href="mailto:ouremailaddress@email.com">
+              ouremailaddress@email.com
+            </a>
+            <form class="contact__form">
+              <input class="contact__form-input" type="text" placeholder="Your name">
+              <input class="contact__form-input" type="email" placeholder="Your e-mail">
+              <textarea class="contact__form-textarea" placeholder="Your message"></textarea>
+              <button class="contact__form-button" type="submit">Send</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <!-- === / CONTACT === -->
     </main>
 
     <footer class="footer">
@@ -102,7 +160,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa asperiores at corporis exercitationem et
                 quae.
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__info-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
