finished contact page

--- a/app/contact.html
+++ b/app/contact.html
@@ -126,7 +126,9 @@
               </li>
             </ul>
             <p class="contact__text">
-              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock.
+              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street
+              art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack
+              normcore. Lo-fi pop-up banjo portland, echo park hammock.
             </p>
             <a class="contact__phone" href="tel:+14158297934">+1 (415) 829-7934</a>
             <address class="contact__address">
@@ -146,6 +148,211 @@
         </div>
       </section>
       <!-- === / CONTACT === -->
+
+      <!-- === CONTACT-SLIDER === -->
+      <div class="container-fluid">
+        <div class="contact-slider">
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
+            <p class="contact-slider__title">
+              Office furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
+            <p class="contact-slider__title">
+              Kitchen
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg"
+              alt="Dining room category">
+            <p class="contact-slider__title">
+              Dining room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
+            <p class="contact-slider__title">
+              Chair
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
+            <p class="contact-slider__title">
+              Bedroom furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
+            <p class="contact-slider__title">
+              Office furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
+            <p class="contact-slider__title">
+              Kitchen
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg"
+              alt="Dining room category">
+            <p class="contact-slider__title">
+              Dining room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
+            <p class="contact-slider__title">
+              Chair
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
+            <p class="contact-slider__title">
+              Bedroom furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
+            <p class="contact-slider__title">
+              Office furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
+            <p class="contact-slider__title">
+              Kitchen
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg"
+              alt="Dining room category">
+            <p class="contact-slider__title">
+              Dining room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg"
+              alt="Living room category">
+            <p class="contact-slider__title">
+              Living room furniture
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
+            <p class="contact-slider__title">
+              Chair
+            </p>
+          </a>
+          <a class="contact-slider__item" href="#">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
+            <p class="contact-slider__title">
+              Bedroom furniture
+            </p>
+          </a>
+        </div>
+      </div>
+      <!-- === / CONTACT-SLIDER === -->
     </main>
 
     <footer class="footer">
