--- a/app/gallery.html
+++ b/app/gallery.html
@@ -21,23 +21,23 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link" href="about.html">About</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link menu__list-link--active" href="#">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img class="logo__img" src="images/logo.png" alt="logo">
           </a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Blog</a>
+                <a class="menu__list-link" href="blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </nav>
